--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
     "tailwindcss": "^4.1.13"
   },
   "scripts": {
-    "build": "npx tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css --minify", /* npm run build => compiles and minifies Tailwind CSS for production. */
-    "watch": "\"npx @tailwindcss/cli -i ./assets/css/style.css -o ./assets/css/output.css --watch\"" /* npm run watch => continuously rebuilds as you edit files (for local development). */
+    "build": "npx tailwindcss -i ./assets/css/input.css -o ./assets/css/output.css --minify",
+    "watch": "\"npx @tailwindcss/cli -i ./assets/css/style.css -o ./assets/css/output.css --watch\""
+  },
+  "_comments": {
+    "build": "npm run build => Runs Tailwind once for production",
+    "watch": "npm run watch => Runs Tailwind in watch mode for development"
   }
 }
